--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         </activity>
         <activity
             android:name=".AdvanceBreakout"
-            android:label="@string/title_activity_advance_breakout" >
+            android:label="@string/title_activity_advance_breakout"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
